<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="150dp"
                android:layout_margin="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ata_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about_title"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/introduction"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:textSize="20sp"/>

            <ImageView
                android:layout_width="199dp"
                android:layout_height="177dp"
                android:layout_gravity="center"
                android:src="@drawable/ryzen_logo" />

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/cpuText"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="199dp"
                android:layout_height="177dp"
                android:layout_gravity="center"
                android:src="@drawable/radeon_logo" />

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gpuText"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/disclaimer"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:textSize="10sp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>