<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black"
    android:orientation="vertical">

    <ScrollView
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:src="@drawable/r5_7600" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cpu1"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/cpu1More"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="@color/amd_red"
                        app:cornerRadius="0dp"
                        android:textColor="@color/white"
                        android:text="@string/moreButton" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:src="@drawable/r5_7900x" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cpu2"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/cpu2More"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moreButton"
                        android:backgroundTint="@color/amd_red"
                        app:cornerRadius="0dp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:src="@drawable/r7_7700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cpu3"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/cpu3More"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moreButton"
                        android:backgroundTint="@color/amd_red"
                        app:cornerRadius="0dp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:src="@drawable/r7_7700x" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cpu4"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/cpu4More"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moreButton"
                        android:backgroundTint="@color/amd_red"
                        app:cornerRadius="0dp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:src="@drawable/r7_7800x3d" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cpu5"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/cpu5More"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moreButton"
                        android:backgroundTint="@color/amd_red"
                        app:cornerRadius="0dp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:src="@drawable/r9_7900" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cpu6"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/cpu6More"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moreButton"
                        android:backgroundTint="@color/amd_red"
                        app:cornerRadius="0dp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:src="@drawable/r9_7900x" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cpu7"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/cpu7More"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moreButton"
                        android:backgroundTint="@color/amd_red"
                        app:cornerRadius="0dp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:src="@drawable/r9_7900x3d" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cpu8"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/cpu8More"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moreButton"
                        android:backgroundTint="@color/amd_red"
                        app:cornerRadius="0dp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:src="@drawable/r5_7900x" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cpu9"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/cpu9More"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moreButton"
                        android:backgroundTint="@color/amd_red"
                        app:cornerRadius="0dp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="150dp"
                        android:layout_margin="30dp"
                        android:src="@drawable/r9_7950x3d" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/cpu10"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/cpu10More"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moreButton"
                        android:backgroundTint="@color/amd_red"
                        app:cornerRadius="0dp"
                        android:textColor="@color/white"
                        android:layout_marginBottom="5dp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>